Minor fix to clean up font readability

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ $white: #D9D9D9;
 
 #chances{
   font-size: 24px;
+  color: $white;
 }
 
 #ex1 {
